Auto-format on build